alzheimer/ingress/kheops-ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kheops-ingressroute
  namespace: kheops-alzheimer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`alzheimer.unige.ch`) && PathPrefix(`/`)
      services:
        - name: kheopsreverseproxy
          port: 80
  tls:
    secretName: alzheimer.unige.ch-tls
